--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>OpenAI Chatbot</title>
+    <title>GPT Chatbot</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.staticfile.org/jquery/3.6.3/jquery.min.js"></script>
@@ -60,7 +60,7 @@
 
             function fetchResponse(message) {
                 try {
-                    const apiKey = "YOUR_API_KEY_HERE";
+                    const apiKey = "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";
 
                     var settings = {
                         "url": "https://api.openai.com/v1/engines/davinci-codex/completions",
