--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <body>
     <h1 style="display: inline-block;">Chat Page</h1>
-    &nbsp; <input type="text" id="apiKey" value="" style="width: 390px;" placeholder="Type your openai apikey here...">
+    &nbsp; <input type="text" id="apiKey" value="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" style="width: 390px;" placeholder="Type your openai apikey here...">
     <div id="chatbox"></div>
     <textarea id="userInput" type="text" placeholder="Type your message here..."></textarea>
     <br/>
