--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
             <span>ChatBuddy</span>
             <span>ChatBuddy</span>
         </div><br><br><br>
-        &nbsp; <input style="visibility: hidden;" type="password" id="apiKey"
-            value="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" style="width: 390px;"
+        &nbsp; <input type="password" id="apiKey"
+            value="" style="width: 390px;"
             placeholder="Type your openai apikey here...">
         <div style="margin-left: auto; margin-right: auto;" class="loader">
             <div class="face">
