--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                             "content": message
                         });
                         chatbox.append(
-                            `<br><h3 style="margin-left: auto; text-align: right" class="btn"> Q: ${message} </h3>`
+                            `<br><h3 style="margin-left: auto; text-align: right" class="btn"> You: ${message} </h3>`
                         );
                         userInput.val("");
                         sendButton.val("Typing");
