--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Chat Buddy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.png">
     <style>
         body {
             font-family: Arial, sans-serif;
